app/go-bedrock-app/deploy/go-bedrock-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-bedrock-app
  labels:
    app: go-bedrock-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-bedrock-app
  template:
    metadata:
      labels:
        app: go-bedrock-app
    spec:
      serviceAccountName: bedrock-service-account
      containers:
        - name: go-bedrock-app
          image: YOUR_ACCOUNT_ID.dkr.ecr.us-west-2.amazonaws.com/go-bedrock-app:v7
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
---
# apiVersion: v1
# kind: Service
# metadata:
#   name: go-bedrock-service
#   annotations:
#     service.beta.kubernetes.io/aws-load-balancer-type: "external"
#     service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
#     service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
#     service.beta.kubernetes.io/aws-load-balancer-subnets: "<SUBNET_ID_1>,<SUBNET_ID_2>,<SUBNET_ID_3>"
# spec:
#   ports:
#     - port: 80
#       targetPort: 3000
#       protocol: TCP
#   type: LoadBalancer
#   selector:
#     app: go-bedrock-app
